--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="msapplication-tap-highlight" content="no"/>
-    <meta name="description" content="Webapp Cupressus"/>
-    <meta name="keywords" content="Cupressys, educación, diseño, circuitos lógicos"/>
+    <meta name="description" content="Webapp Cipressus"/>
+    <meta name="keywords" content="Cipressus, educación, diseño, circuitos lógicos"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <!-- Deshabilitar cache -->
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate"/>
@@ -23,10 +23,11 @@
     <script type="text/javascript" src="assets/materialize.min.js"></script>
     <script type="text/javascript" src="assets/angular.min.js"></script>
     <script type="text/javascript" src="assets/angular-route.min.js"></script>
+    <script type="text/javascript" src="assets/firebase.js"></script>
 
 </head>	
 
-<body style="overflow: hidden;" ng-app="cupressus">
+<body style="overflow: hidden;" ng-app="cipressus">
 
     <ng-view></ng-view>
 
