--- a/misc/index.html
+++ b/misc/index.html
@@ -18,7 +18,7 @@
 
 <body>
     
-    <script type="text/javascript" src="eval.js"></script>
+    <script type="text/javascript" src="evalTests.js"></script>
 
 </body>
  
