--- a/index.html
+++ b/index.html
@@ -1,62 +1,234 @@
 <!DOCTYPE html>
 <html lang="es-AR">
+
 <head>
     <!-- ##################### META ##################### -->
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="msapplication-tap-highlight" content="no"/>
-    <meta name="description" content="Webapp Cipressus"/>
-    <meta name="keywords" content="Cipressus, educación, diseño, circuitos lógicos"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="msapplication-tap-highlight" content="no" />
+    <meta name="description" content="Webapp Cipressus" />
+    <meta name="keywords" content="Cipressus, educación, diseño, circuitos lógicos" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Deshabilitar cache -->
-    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate"/>
-    <meta http-equiv="Pragma" content="no-cache"/>
-    <meta http-equiv="Expires" content="0"/>
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
 
     <!-- ##################### CSS ##################### -->
-    <link rel="icon" href="img/favicon.ico" sizes="16x16"/>
-    <link type="text/css" rel="stylesheet" href="style/icons.css"/>
-    <link type="text/css" rel="stylesheet" href="style/materialize.min.css" media="screen,projection"/>
-    <link type="text/css" rel="stylesheet" href="style/custom.css"/>
+    <link rel="icon" href="img/favicon.ico" sizes="16x16" />
+    <link type="text/css" rel="stylesheet" href="style/icons.css" />
+    <link type="text/css" rel="stylesheet" href="style/materialize.min.css" media="screen,projection" />
+    <link type="text/css" rel="stylesheet" href="style/jsCalendar.min.css">
+    <link type="text/css" rel="stylesheet" href="style/custom.css" />
 
-    <!-- ##################### JS ##################### -->
+    <!-- ##################### JS ASSETS ##################### -->
     <script type="text/javascript" src="assets/materialize.min.js"></script>
     <script type="text/javascript" src="assets/angular.min.js"></script>
     <script type="text/javascript" src="assets/angular-route.min.js"></script>
+    <script type="text/javascript" src="assets/angular-sanitize.min.js"></script>
     <script type="text/javascript" src="assets/firebase.js"></script>
+    <script type="text/javascript" src="assets/moment.min.js"></script>
+    <script type="text/javascript" src="assets/jsCalendar.min.js"></script>
+    <script type="text/javascript" src="assets/jsCalendar.lang.es.js"></script>
+    <script type="text/javascript" src="assets/canvasjs.min.js"></script>
     <script type="text/javascript" src="assets/cipressus.js"></script>
-    
 
-</head>	
 
-<body style="overflow: hidden;" ng-app="cipressus">
+</head>
+
+<body ng-app="cipressus">
 
     <!-- ##################### PRELOADER ##################### -->
     <div class="preloader-wrapper-pre valign-wrapper" ng-if="loading">
         <h5 id="preloader_progress" class="white-text preloader-progress-text"></h5>
         <div class="preloader-wrapper big active">
-        <div class="spinner-layer spinner-blue-only">
-            <div class="circle-clipper left">
-            <div class="circle"></div>
-            </div><div class="gap-patch">
-            <div class="circle"></div>
-            </div><div class="circle-clipper right">
-            <div class="circle"></div>
+            <div class="spinner-layer spinner-blue-only">
+                <div class="circle-clipper left">
+                    <div class="circle"></div>
+                </div>
+                <div class="gap-patch">
+                    <div class="circle"></div>
+                </div>
+                <div class="circle-clipper right">
+                    <div class="circle"></div>
+                </div>
             </div>
         </div>
+    </div>
+
+
+    <!-- ##################### NAVBAR ##################### -->
+    <div ng-show="userLogged">
+        <!-- Contenido del dropdown de mensajes -->
+        <ul id="msgs_dropdown" class="dropdown-content">
+            <li ng-repeat="msg in user_messages"><a class="modal-trigger black-text" data-target="msg_modal" ng-click="displayMsg(msg)">{{msg.subject}}</a></li>
+        </ul>
+        <!-- Contenido del dropdown de notificaciones -->
+        <ul id="notifs_dropdown" class="dropdown-content">
+            <li ng-repeat="notif in user_notifications"><a class="black-text">{{notif.text}}<i class="material-icons">{{notif.icono}}</i></a></li>
+        </ul>
+        <!-- Contenido de la barra superior (navbar) -->
+        <div class="navbar-fixed">
+            <nav>
+                <div class="nav-wrapper green darken-2">
+                    <a id="menu" data-target="slide-out" class="sidenav-trigger" ng-show="userLogged"
+                        style="cursor: pointer;"><i class="material-icons small">menu</i></a>
+                    <a class="brand-logo"><img width="100px" src="images/navbarlogo.png"></a>
+                    <ul id="nav-mobile" class="right">
+                        <li>
+                            <a id="mensajes" class="dropdown-trigger" data-target="msgs_dropdown">
+                                <i class="material-icons">mail_outline arrow_drop_down</i>
+                            </a>
+                        </li>
+                        <li>
+                            <a class="dropdown-trigger" data-target="notifs_dropdown">
+                                <i class="material-icons">notifications_none arrow_drop_down</i>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
         </div>
     </div>
 
 
 
+    <!-- ##################### SIDENAV ##################### -->
+    <ul id="slide-out" class="sidenav hoverable" ng-show="userLogged">
+        <li>
+            <div class="user-view">
+                <div class="background">
+                    <img src="images/background.png">
+                </div>
+                <a href="#profile"><img class="circle" src="images/avatar_0.png"></a>
+                <a href="#profile"><span class="white-text name">{{user.data.name}}</span></a>
+                <a href="#profile"><span class="white-text email">{{user.data.email}}</span></a>
+            </div>
+        </li>
+        <li class="no-padding">
+            <a href="#/" class="collapsible-header">Inicio<i class="material-icons">home</i></a>
+        </li>
+        <li class="no-padding">
+            <a href="#/scores" class="collapsible-header">Calificaciones<i class="material-icons">school</i></a>
+        </li>
+        <li class="no-padding">
+            <a href="#/calendar" class="collapsible-header">Cronograma<i class="material-icons">calendar_today</i></a>
+        </li>
+        <li class="no-padding" ng-show="user.admin">
+            <ul class="collapsible_1 collapsible collapsible-accordion">
+                <li>
+                    <a class="collapsible-header">Administrar<i class="material-icons">arrow_drop_down</i></a>
+                    <div class="collapsible-body">
+                        <ul>
+                            <li><a href="#/students">Alumnos<i class="material-icons">group</i></a></li>
+                            <li><a href="#/activities">Actividades<i class="material-icons">build</i></a></li>
+                            <li><a href="#/newseditor">Editor de noticias<i class="material-icons">fiber_new</i></a></li>
+                        </ul>
+                    </div>
+                </li>
+            </ul>
+        </li>
+        <li class="no-padding">
+            <ul class="collapsible_2 collapsible collapsible-accordion">
+                <li>
+                    <a class="collapsible-header">Usuario<i class="material-icons">arrow_drop_down</i></a>
+                    <div class="collapsible-body">
+                        <ul>
+                            <li><a href="#/profile">Ver perfil<i class="material-icons">perm_identity</i></a></li>
+                            <li><a href="#/" ng-click="signOut()">Salir<i class="material-icons">exit_to_app</i></a></li>
+                        </ul>
+                    </div>
+                </li>
+            </ul>
+        </li>
+        <li class="divider"></li>
+        <li class="no-padding">
+            <a class="collapsible-header modal-trigger" data-target="help_modal">Ayuda<i class="material-icons">help</i></a>
+        </li>
+        <li class="no-padding">
+            <a href="https://github.com/matiasmicheletto/cipressus" class="collapsible-header">Documentación<i class="material-icons">import_contacts</i></a>
+        </li>
+        <li class="no-padding">
+            <a class="collapsible-header modal-trigger" data-target="about_modal">Acerca de<i class="material-icons">info</i></a>
+        </li>
+
+    </ul>
+
+
     <ng-view></ng-view>
+
+
+    <!-- ##################### MODALS ##################### -->
+    <div id="about_modal" class="modal">
+        <div class="modal-content">
+            <!-- fondo -->
+            <div style="background-image: url('images/mainlogo.png'); 
+                        background-repeat: no-repeat;
+                        background-position: 50% 50%;
+                        background-attachment: fixed;
+                        background-size: 60%;
+                        filter: blur(10px);
+                        width: 100%; 
+                        height: 100%; 
+                        position: fixed; 
+                        top:0px; 
+                        left:0px;
+                        z-index: -10;">
+            </div>
+            <div class="row">
+            <h4>Acerca de CIPRESSUS</h4>
+            <p>CIPRESSUS es una plataforma online que implementa un sistema de cómputo de calificaciones para actividades educativas y permite la consulta en tiempo real de resultados de evaluaciones, noticias, cronograma de cátedras entre otras utilidades.</p>
+            </div>
+            <div class="row">
+                <h5>Contacto</h5>
+                <p>LSD | Laboratorio de Sistemas Digitales</p>
+                <p>DIEC | Departamento de Ingeniería Eléctrica y Computadoras</p>
+                <p>San Andrés 800, CP8000 Bahía Blanca</p>
+                <p>Buenos Aires, Argentina</p>
+                <p>Teléfono: +54 291 4595153/4</p>
+                <p>Website: <a href="http://www.diec.uns.edu.ar/">http://www.diec.uns.edu.ar/</a></p>
+            </div>
+            <br><br>
+            <div class="row" style="font-size:75%;">  
+                <h5>Diseño e implementación</h5>
+                <p>Matías J. Micheletto </p>
+                <p>Email: <a href="mailto:matias.micheletto@uns.edu.ar?Subject=Ref.%20Cipressus">matias.micheletto@uns.edu.ar</a></p>
+                <p>Documentación: <a href="https://github.com/matiasmicheletto/cipressus">https://github.com/matiasmicheletto/cipressus</a></p>
+            </div>
+            <div class="row" style="font-size:75%;">
+                <h6>Términos y condiciones</h6>
+                <p>This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License.</p>
+                <p>This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details. You should have received a copy of the GNU General Public License along with this program.  If not, see http://www.gnu.org/licenses.</p>
+            </div>
+        </div>
+    </div>
+
+    <div id="help_modal" class="modal">
+        <div class="modal-content">         
+            <div class="row">
+                <div class="col s12">
+                    <h4>¿En qué podemos ayudarte?</h4>
+                    <div class="input-field col s12">
+                    <textarea id="textarea" class="materialize-textarea" ng-model="helpMessage"></textarea>
+                    <label for="textarea">Consulta</label>
+                    </div>
+                    <a class="modal-close waves-effect waves-white btn green darken-2" ng-disabled = "!helpMessage || helpMessage.length < 1" ng-click="sendHelp()">Enviar</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
     <!-- ##################### JS ##################### -->
     <script type="text/javascript" src="controllers/index.js"></script>
     <script type="text/javascript" src="controllers/login.js"></script>
     <script type="text/javascript" src="controllers/home.js"></script>
-    
+    <script type="text/javascript" src="controllers/calendar.js"></script>
+    <script type="text/javascript" src="controllers/scores.js"></script>
+    <script type="text/javascript" src="controllers/activities.js"></script>
+    <script type="text/javascript" src="controllers/profile.js"></script>
+
 </body>
- 
+
 </html>
