--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
     <script type="text/javascript" src="assets/moment.min.js"></script>
     <script type="text/javascript" src="assets/jsCalendar.min.js"></script>
     <script type="text/javascript" src="assets/jsCalendar.lang.es.js"></script>
-    <script src="//unpkg.com/sunburst-chart"></script>
+    <script type="text/javascript" src="assets/highcharts.js"></script>
+    <script type="text/javascript" src="assets/sunburst.js"></script>
     <script type="text/javascript" src="assets/cipressus.js"></script>
 
 
