Dashboard del sistema con grafico sunburst y grafico polar de calificaciones

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <script type="text/javascript" src="assets/jsCalendar.lang.es.js"></script>
     <script type="text/javascript" src="assets/highcharts.js"></script>
     <script type="text/javascript" src="assets/sunburst.js"></script>
+    <script type="text/javascript" src="assets/variable-pie.js"></script>
     <script type="text/javascript" src="assets/cipressus.js"></script>
 
 
@@ -111,10 +112,13 @@
             <a href="#/" class="collapsible-header">Inicio<i class="material-icons">home</i></a>
         </li>
         <li class="no-padding">
-            <a href="#/scores" class="collapsible-header">Mis calificaciones<i class="material-icons">school</i></a>
+            <a href="#/scores" class="collapsible-header">Dashboard<i class="material-icons">dashboard</i></a>
         </li>
         <li class="no-padding">
             <a href="#/calendar" class="collapsible-header">Cronograma<i class="material-icons">calendar_today</i></a>
+        </li>
+        <li class="no-padding">
+            <a href="#/sources" class="collapsible-header">Material<i class="material-icons">local_library</i></a>
         </li>
         <li class="no-padding" ng-show="user.admin">
             <ul class="collapsible_1 collapsible collapsible-accordion">
