Listado de usuarios simple

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                     <a class="collapsible-header">Administrar<i class="material-icons">arrow_drop_down</i></a>
                     <div class="collapsible-body">
                         <ul>
-                            <li><a href="#/students">Alumnos<i class="material-icons">group</i></a></li>
+                            <li><a href="#/users">Usuarios<i class="material-icons">group</i></a></li>
                             <li><a href="#/activities">Actividades<i class="material-icons">build</i></a></li>
                             <li><a href="#/newseditor">Noticias<i class="material-icons">fiber_new</i></a></li>
                         </ul>
@@ -233,6 +233,7 @@
     <script type="text/javascript" src="controllers/scores.js"></script>
     <script type="text/javascript" src="controllers/activities.js"></script>
     <script type="text/javascript" src="controllers/profile.js"></script>
+    <script type="text/javascript" src="controllers/users.js"></script>
 
 </body>
 
