Editor de comunicados

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <head>
     <!-- ##################### META ##################### -->
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="msapplication-tap-highlight" content="no" />
     <meta name="description" content="Webapp Cipressus" />
@@ -128,7 +127,7 @@
                         <ul>
                             <li><a href="#/users">Usuarios<i class="material-icons">group</i></a></li>
                             <li><a href="#/activities">Actividades<i class="material-icons">build</i></a></li>
-                            <li><a href="#/newseditor">Noticias<i class="material-icons">fiber_new</i></a></li>
+                            <li><a href="#/editor">Noticias<i class="material-icons">fiber_new</i></a></li>
                         </ul>
                     </div>
                 </li>
@@ -233,6 +232,7 @@
     <script type="text/javascript" src="controllers/scores.js"></script>
     <script type="text/javascript" src="controllers/activities.js"></script>
     <script type="text/javascript" src="controllers/profile.js"></script>
+    <script type="text/javascript" src="controllers/editor.js"></script>
     <script type="text/javascript" src="controllers/users.js"></script>
 
 </body>
