Vista de cronograma de actividades con fullcalendar. TODO: creacion, edicion y eliminacion de eventos.

--- a/index.html
+++ b/index.html
@@ -18,18 +18,19 @@
     <link rel="icon" href="img/favicon.ico" sizes="16x16" />
     <link type="text/css" rel="stylesheet" href="style/icons.css" />
     <link type="text/css" rel="stylesheet" href="style/materialize.min.css" media="screen,projection" />
-    <link type="text/css" rel="stylesheet" href="style/jsCalendar.min.css">
+    <link type="text/css" rel="stylesheet" href="style/fullcalendar.css">
     <link type="text/css" rel="stylesheet" href="style/custom.css" />
 
-    <!-- ##################### JS ASSETS ##################### -->
+    <!-- ##################### ASSETS ##################### -->
     <script type="text/javascript" src="assets/materialize.min.js"></script>
     <script type="text/javascript" src="assets/angular.min.js"></script>
     <script type="text/javascript" src="assets/angular-route.min.js"></script>
     <script type="text/javascript" src="assets/angular-sanitize.min.js"></script>
+    <script type="text/javascript" src="assets/jquery.min.js"></script>
     <script type="text/javascript" src="assets/firebase.js"></script>
     <script type="text/javascript" src="assets/moment.min.js"></script>
-    <script type="text/javascript" src="assets/jsCalendar.min.js"></script>
-    <script type="text/javascript" src="assets/jsCalendar.lang.es.js"></script>
+    <script type="text/javascript" src="assets/fullcalendar.min.js"></script>
+    <script type="text/javascript" src="assets/fullcalendar-es-us.js"></script>
     <script type="text/javascript" src="assets/highcharts.js"></script>
     <script type="text/javascript" src="assets/sunburst.js"></script>
     <script type="text/javascript" src="assets/variable-pie.js"></script>
@@ -224,7 +225,7 @@
     </div>
 
 
-    <!-- ##################### JS ##################### -->
+    <!-- ##################### CONTROLLERS ##################### -->
     <script type="text/javascript" src="controllers/index.js"></script>
     <script type="text/javascript" src="controllers/login.js"></script>
     <script type="text/javascript" src="controllers/home.js"></script>
