Formularios para poner calificaciones y fechas de entregas

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <a href="#/" class="collapsible-header">Inicio<i class="material-icons">home</i></a>
         </li>
         <li class="no-padding">
-            <a href="#/scores" class="collapsible-header">Dashboard<i class="material-icons">dashboard</i></a>
+            <a href="#/dashboard" class="collapsible-header">Dashboard<i class="material-icons">dashboard</i></a>
         </li>
         <li class="no-padding">
             <a href="#/calendar" class="collapsible-header">Cronograma<i class="material-icons">calendar_today</i></a>
@@ -127,6 +127,7 @@
                     <div class="collapsible-body">
                         <ul>
                             <li><a href="#/users">Usuarios<i class="material-icons">group</i></a></li>
+                            <li><a href="#/">Asistencia<i class="material-icons">how_to_reg</i></a></li>
                             <li><a href="#/activities">Actividades<i class="material-icons">build</i></a></li>
                             <li><a href="#/editor">Noticias<i class="material-icons">fiber_new</i></a></li>
                         </ul>
@@ -183,7 +184,7 @@
             </div>
             <div class="row">
             <h4>Acerca de CIPRESSUS</h4>
-            <p>CIPRESSUS es una plataforma online que implementa un sistema de cómputo de calificaciones para actividades educativas y permite la consulta en tiempo real de resultados de evaluaciones, noticias, cronograma de cátedras entre otras utilidades.</p>
+            <p>CIPRESSUS es una plataforma online que implementa un sistema de cómputo de calificaciones para actividades educativas y permite la consulta en tiempo real de resultados de evaluaciones, noticias y cronograma de cátedra, descarga de material de estudio y muchas otras utilidades.</p>
             </div>
             <div class="row">
                 <h5>Contacto</h5>
@@ -197,7 +198,7 @@
             <br><br>
             <div class="row" style="font-size:75%;">  
                 <h5>Diseño e implementación</h5>
-                <p>Matías J. Micheletto </p>
+                <p>Ing. Matías J. Micheletto</p>
                 <p>Email: <a href="mailto:matias.micheletto@uns.edu.ar?Subject=Ref.%20Cipressus">matias.micheletto@uns.edu.ar</a></p>
                 <p>Documentación: <a href="https://github.com/matiasmicheletto/cipressus">https://github.com/matiasmicheletto/cipressus</a></p>
             </div>
@@ -230,7 +231,7 @@
     <script type="text/javascript" src="controllers/login.js"></script>
     <script type="text/javascript" src="controllers/home.js"></script>
     <script type="text/javascript" src="controllers/calendar.js"></script>
-    <script type="text/javascript" src="controllers/scores.js"></script>
+    <script type="text/javascript" src="controllers/dashboard.js"></script>
     <script type="text/javascript" src="controllers/activities.js"></script>
     <script type="text/javascript" src="controllers/profile.js"></script>
     <script type="text/javascript" src="controllers/editor.js"></script>
