Evaluación de asistencia, vista y controlador

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                     <div class="collapsible-body">
                         <ul>
                             <li><a href="#/users">Usuarios<i class="material-icons">group</i></a></li>
-                            <li><a href="#/">Asistencia<i class="material-icons">how_to_reg</i></a></li>
+                            <li><a href="#/attendance">Asistencia<i class="material-icons">how_to_reg</i></a></li>
                             <li><a href="#/activities">Actividades<i class="material-icons">build</i></a></li>
                             <li><a href="#/editor">Noticias<i class="material-icons">fiber_new</i></a></li>
                         </ul>
@@ -230,12 +230,13 @@
     <script type="text/javascript" src="controllers/index.js"></script>
     <script type="text/javascript" src="controllers/login.js"></script>
     <script type="text/javascript" src="controllers/home.js"></script>
-    <script type="text/javascript" src="controllers/calendar.js"></script>
     <script type="text/javascript" src="controllers/dashboard.js"></script>
-    <script type="text/javascript" src="controllers/activities.js"></script>
-    <script type="text/javascript" src="controllers/profile.js"></script>
-    <script type="text/javascript" src="controllers/editor.js"></script>
+    <script type="text/javascript" src="controllers/calendar.js"></script>
     <script type="text/javascript" src="controllers/users.js"></script>
+    <script type="text/javascript" src="controllers/attendance.js"></script>
+    <script type="text/javascript" src="controllers/activities.js"></script>
+    <script type="text/javascript" src="controllers/editor.js"></script>
+    <script type="text/javascript" src="controllers/profile.js"></script>
 
 </body>
 
