--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link type="text/css" rel="stylesheet" href="style/icons.css" />
     <link type="text/css" rel="stylesheet" href="style/materialize.min.css" media="screen,projection" />
     <link type="text/css" rel="stylesheet" href="style/fullcalendar.css">
+    <link type="text/css" rel="stylesheet" href="style/timeline.css" />
     <link type="text/css" rel="stylesheet" href="style/custom.css" />
 
     <!-- ##################### ASSETS ##################### -->
