Login: input de confirmacion y boton de desofuscación de contraseña

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 
     <!-- ##################### ASSETS ##################### -->
     <script type="text/javascript" src="assets/materialize.min.js"></script>
-    <script type="text/javascript" src="assets/angular.min.js"></script>
-    <script type="text/javascript" src="assets/angular-route.min.js"></script>
-    <script type="text/javascript" src="assets/angular-sanitize.min.js"></script>
+    <script type="text/javascript" src="assets/Angular/angular.min.js"></script>
+    <script type="text/javascript" src="assets/Angular/angular-route.min.js"></script>
+    <script type="text/javascript" src="assets/Angular/angular-sanitize.min.js"></script>
     <script type="text/javascript" src="assets/jquery.min.js"></script>
     <script type="text/javascript" src="assets/is.min.js"></script>
     <script type="text/javascript" src="assets/firebase.js"></script>
