--- a/index.html
+++ b/index.html
@@ -41,26 +41,26 @@
     <link type="text/css" rel="stylesheet" href="style/simcir-basicset.css"/>
 
     <!-- ##################### ASSETS ##################### -->
-    <script type="text/javascript" src="assets/materialize.min.js"></script>
-    <script type="text/javascript" src="assets/Angular/angular.min.js"></script>
-    <script type="text/javascript" src="assets/Angular/angular-route.min.js"></script>
-    <script type="text/javascript" src="assets/Angular/angular-sanitize.min.js"></script>
-    <script type="text/javascript" src="assets/jquery.min.js"></script>
-    <script type="text/javascript" src="assets/is.min.js"></script>
-    <script type="text/javascript" src="assets/firebase.js"></script>
-    <script type="text/javascript" src="assets/moment.min.js"></script>
-    <script type="text/javascript" src="assets/fullcalendar.min.js"></script>
-    <script type="text/javascript" src="assets/fullcalendar-es-us.js"></script>
-    <script type="text/javascript" src="assets/highcharts.js"></script>
-    <script type="text/javascript" src="assets/sunburst.js"></script>
-    <script type="text/javascript" src="assets/variable-pie.js"></script>
-    <script type="text/javascript" src="assets/quill.min.js"></script>
-    <script type="text/javascript" src="assets/image-resize.min.js"></script>
-    <script type="text/javascript" src="assets/pdf.js"></script>    
-    <script type="text/javascript" src="assets/pdf.worker.js"></script>
-    <script type="text/javascript" src="assets/SimCirJS/simcir.js"></script>
-    <script type="text/javascript" src="assets/SimCirJS/simcir-basicset.js"></script>
-    <script type="text/javascript" src="assets/SimCirJS/simcir-library.js"></script>
+    <script type="text/javascript" src="vendor/materialize.min.js"></script>
+    <script type="text/javascript" src="vendor/angular.min.js"></script>
+    <script type="text/javascript" src="vendor/angular-route.min.js"></script>
+    <script type="text/javascript" src="vendor/angular-sanitize.min.js"></script>
+    <script type="text/javascript" src="vendor/jquery.min.js"></script>
+    <script type="text/javascript" src="vendor/is.min.js"></script>
+    <script type="text/javascript" src="vendor/firebase.min.js"></script>
+    <script type="text/javascript" src="vendor/moment.min.js"></script>
+    <script type="text/javascript" src="vendor/fullcalendar.min.js"></script>
+    <script type="text/javascript" src="vendor/fullcalendar-es-us.js"></script>
+    <script type="text/javascript" src="vendor/highcharts.min.js"></script>
+    <script type="text/javascript" src="vendor/sunburst.min.js"></script>
+    <script type="text/javascript" src="vendor/variable-pie.js"></script>
+    <script type="text/javascript" src="vendor/quill.min.js"></script>
+    <script type="text/javascript" src="vendor/image-resize.min.js"></script>
+    <script type="text/javascript" src="vendor/pdf.js"></script>    
+    <script type="text/javascript" src="vendor/pdf.worker.js"></script>
+    <script type="text/javascript" src="vendor/simcir.js"></script>
+    <script type="text/javascript" src="vendor/simcir-basicset.js"></script>
+    <script type="text/javascript" src="vendor/simcir-library.js"></script>
     <script type="text/javascript" src="assets/cipressus.js"></script>
 
 </head>
@@ -146,10 +146,13 @@
         <li class="no-padding" ng-show="user.enrolled">
             <a href="#/sources" class="collapsible-header">Material<i class="material-icons">local_library</i></a>
         </li>
+        <li class="no-padding" ng-show="user.enrolled">
+            <a href="#/submissions" class="collapsible-header">Entregas<i class="material-icons">open_in_browser</i></a>
+        </li>
         <li class="no-padding" ng-show="user.admin">
             <a href="#/hardware" class="collapsible-header">Probador<i class="material-icons">usb</i></a>
         </li>
-        <li class="no-padding" ng-show="user.admin">
+        <li class="no-padding" ng-show="user.enrolled">
             <a href="#/simulator" class="collapsible-header">Simulador<i class="material-icons">developer_board</i></a>
         </li>
         <li class="no-padding" ng-show="user.admin">
@@ -266,6 +269,7 @@
     <script type="text/javascript" src="controllers/dashboard.js"></script>
     <script type="text/javascript" src="controllers/calendar.js"></script>
     <script type="text/javascript" src="controllers/sources.js"></script>
+    <script type="text/javascript" src="controllers/submissions.js"></script>
     <script type="text/javascript" src="controllers/hardware.js"></script>
     <script type="text/javascript" src="controllers/simulator.js"></script>
     <script type="text/javascript" src="controllers/users.js"></script>
