Almacenamiento de copias de la db en local storage para optimizar uso de la db

--- a/index.html
+++ b/index.html
@@ -40,11 +40,12 @@
     <link type="text/css" rel="stylesheet" href="style/simcir.css"/>
     <link type="text/css" rel="stylesheet" href="style/simcir-basicset.css"/>
 
-    <!-- ##################### ASSETS ##################### -->
+    <!-- ##################### LIBS ##################### -->
     <script type="text/javascript" src="vendor/materialize.min.js"></script>
     <script type="text/javascript" src="vendor/angular.min.js"></script>
     <script type="text/javascript" src="vendor/angular-route.min.js"></script>
     <script type="text/javascript" src="vendor/angular-sanitize.min.js"></script>
+    <script type="text/javascript" src="vendor/angular-local-storage.min.js"></script>
     <script type="text/javascript" src="vendor/jquery.min.js"></script>
     <script type="text/javascript" src="vendor/is.min.js"></script>
     <script type="text/javascript" src="vendor/firebase.min.js"></script>
@@ -263,21 +264,21 @@
 
 
     <!-- ##################### CONTROLLERS ##################### -->
-    <script type="text/javascript" src="controllers/index.js"></script>
-    <script type="text/javascript" src="controllers/login.js"></script>
-    <script type="text/javascript" src="controllers/home.js"></script>
-    <script type="text/javascript" src="controllers/dashboard.js"></script>
-    <script type="text/javascript" src="controllers/calendar.js"></script>
-    <script type="text/javascript" src="controllers/sources.js"></script>
-    <script type="text/javascript" src="controllers/submissions.js"></script>
-    <script type="text/javascript" src="controllers/hardware.js"></script>
-    <script type="text/javascript" src="controllers/simulator.js"></script>
-    <script type="text/javascript" src="controllers/users.js"></script>
-    <script type="text/javascript" src="controllers/stats.js"></script>
-    <script type="text/javascript" src="controllers/attendance.js"></script>
-    <script type="text/javascript" src="controllers/activities.js"></script>
-    <script type="text/javascript" src="controllers/editor.js"></script>
-    <script type="text/javascript" src="controllers/profile.js"></script>
+    <script type="text/javascript" src="controllers/index.js?v=1.0.33"></script>
+    <script type="text/javascript" src="controllers/login.js?v=1.0.33"></script>
+    <script type="text/javascript" src="controllers/home.js?v=1.0.33"></script>
+    <script type="text/javascript" src="controllers/dashboard.js?v=1.0.33"></script>
+    <script type="text/javascript" src="controllers/calendar.js?v=1.0.33"></script>
+    <script type="text/javascript" src="controllers/sources.js?v=1.0.33"></script>
+    <script type="text/javascript" src="controllers/submissions.js?v=1.0.33"></script>
+    <script type="text/javascript" src="controllers/hardware.js?v=1.0.33"></script>
+    <script type="text/javascript" src="controllers/simulator.js?v=1.0.33"></script>
+    <script type="text/javascript" src="controllers/users.js?v=1.0.33"></script>
+    <script type="text/javascript" src="controllers/stats.js?v=1.0.33"></script>
+    <script type="text/javascript" src="controllers/attendance.js?v=1.0.33"></script>
+    <script type="text/javascript" src="controllers/activities.js?v=1.0.33"></script>
+    <script type="text/javascript" src="controllers/editor.js?v=1.0.33"></script>
+    <script type="text/javascript" src="controllers/profile.js?v=1.0.33"></script>
 
 </body>
 
