Test de Felder-Silverman para usuarios alumnos

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                         <textarea id="textarea" class="materialize-textarea" ng-model="helpMessage"></textarea>
                         <label for="textarea">Consulta</label>
                     </div>
-                    <a class="modal-close waves-effect waves-white btn green darken-4" ng-disabled = "!helpMessage || helpMessage.length < 1" ng-click="sendHelp()">Enviar</a>
+                    <a class="waves-effect waves-white btn green darken-4" ng-disabled = "!helpMessage || helpMessage.length < 1" ng-click="sendHelp()">Enviar</a>
                 </div>
             </div>
         </div>
