Organizacion archivos php. Directiva para mostrar resultados del test FS

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         <li class="no-padding" ng-show="user.enrolled">
             <a href="#/submissions" class="collapsible-header">Entregas<i class="material-icons">open_in_browser</i></a>
         </li>
-        <li class="no-padding" ng-show="user.admin">
+        <li class="no-padding" ng-show="user.enrolled">
             <a href="#/hardware" class="collapsible-header">Probador<i class="material-icons">usb</i></a>
         </li>
         <li class="no-padding" ng-show="user.enrolled">
@@ -262,21 +262,22 @@
 
 
     <!-- ##################### CONTROLLERS ##################### -->
-    <script type="text/javascript" src="controllers/index.js?v=1.0.42"></script>
-    <script type="text/javascript" src="controllers/login.js?v=1.0.42"></script>
-    <script type="text/javascript" src="controllers/home.js?v=1.0.42"></script>
-    <script type="text/javascript" src="controllers/dashboard.js?v=1.0.42"></script>
-    <script type="text/javascript" src="controllers/calendar.js?v=1.0.42"></script>
-    <script type="text/javascript" src="controllers/sources.js?v=1.0.42"></script>
-    <script type="text/javascript" src="controllers/submissions.js?v=1.0.42"></script>
-    <script type="text/javascript" src="controllers/hardware.js?v=1.0.42"></script>
-    <script type="text/javascript" src="controllers/simulator.js?v=1.0.42"></script>
-    <script type="text/javascript" src="controllers/users.js?v=1.0.42"></script>
-    <script type="text/javascript" src="controllers/stats.js?v=1.0.42"></script>
-    <script type="text/javascript" src="controllers/attendance.js?v=1.0.42"></script>
-    <script type="text/javascript" src="controllers/activities.js?v=1.0.42"></script>
-    <script type="text/javascript" src="controllers/editor.js?v=1.0.42"></script>
-    <script type="text/javascript" src="controllers/profile.js?v=1.0.42"></script>
+    <script type="text/javascript" src="controllers/index.js"></script>
+    <script type="text/javascript" src="controllers/testResults.js"></script>
+    <script type="text/javascript" src="controllers/login.js"></script>
+    <script type="text/javascript" src="controllers/home.js"></script>
+    <script type="text/javascript" src="controllers/dashboard.js"></script>
+    <script type="text/javascript" src="controllers/calendar.js"></script>
+    <script type="text/javascript" src="controllers/sources.js"></script>
+    <script type="text/javascript" src="controllers/submissions.js"></script>
+    <script type="text/javascript" src="controllers/hardware.js"></script>
+    <script type="text/javascript" src="controllers/simulator.js"></script>
+    <script type="text/javascript" src="controllers/users.js"></script>
+    <script type="text/javascript" src="controllers/stats.js"></script>
+    <script type="text/javascript" src="controllers/attendance.js"></script>
+    <script type="text/javascript" src="controllers/activities.js"></script>
+    <script type="text/javascript" src="controllers/editor.js"></script>
+    <script type="text/javascript" src="controllers/profile.js"></script>
 
 </body>
 
