Actualizacion librerias de highcharts. Grafico de barras para lista de notas del curso

--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
     <script type="text/javascript" src="vendor/moment.min.js"></script>
     <script type="text/javascript" src="vendor/fullcalendar.min.js"></script>
     <script type="text/javascript" src="vendor/fullcalendar-es-us.js"></script>
-    <script type="text/javascript" src="vendor/highcharts.min.js"></script>
+    <script type="text/javascript" src="vendor/highcharts.min.js"></script>    
+    <script type="text/javascript" src="vendor/highcharts-drilldown.min.js"></script>
     <script type="text/javascript" src="vendor/sunburst.min.js"></script>
     <script type="text/javascript" src="vendor/variable-pie.js"></script>
     <script type="text/javascript" src="vendor/quill.min.js"></script>
