--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <link rel="manifest" href="manifest.json"></link>
     <!-- PWA Service Worker -->
     <script>
-        if (navigator.serviceWorker.controller)
+        if (navigator.serviceWorker.controller){
             console.log('[PWA Builder] active service worker found, no need to register')
-        else
+        }else
             navigator.serviceWorker.register('pwabuilder-sw.js', {scope: './'})
             .then(function(reg){
                 console.log('Service worker has been registered for scope:'+ reg.scope);
