Fondo en vista de login

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
 </head>
 
-<body ng-app="cipressus">
+<body ng-app="cipressus" class="{{bodyClass}}">
 
     <!-- ##################### PRELOADER ##################### -->
     <div class="preloader-wrapper-pre valign-wrapper" ng-if="loading">
