--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="es-AR">
 
 <head>
+
+	<title>Cipressus</title>
+
     <!-- ##################### META ##################### -->
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
